@@ -3,6 +3,10 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2013-07-25 (SVN):
+    * removed the gl_dogamma hack. some updates to the sdl and fx gamma
+      code.
+
 2013-07-24 (SVN):
     * docs/COMPILE: add note about old Visual Studio versions.  update
       the nasm recommended versions.
